# 2025-12-09-visst-llm

./: .gitignore  Makefile  README.md  chat.py  chat_prompt.py  index.qmd  pyproject.toml  styles.css
code/: 01-first.py  02-prompt.py  03-prompt-read.py  04a-github.py  04b-ollama.py  05-tool.py  prompt.md
docs/: index.html
slides/: Makefile  _quarto.yml  index.qmd
slides/code/: app-20-questions.R
